Fix scaling on smaller devices (#3)

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,21 @@
 .App {
   text-align: center;
+  background-color: #282c34;
+  min-height: 100vh;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 0px;
+  margin-right: 0px;
+}
+
+div .App table {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .App-logo {
@@ -13,19 +29,13 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
 .App-link {
   color: #61dafb;
+}
+
+.App img {
+  max-width: 90%;
+  margin: auto;
 }
 
 @keyframes App-logo-spin {
